--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
         <div class="actions">
           <a class="btn primary" href="#treasure">Khám phá Kho Báu</a>
           <a class="btn" href="#pirate-king">Hiểu về Vua Hải Tặc</a>
-          <a class="btn ghost" href="TrangWebFanOnePiece.html" title="Quay về trang chính">⬅ Quay lại trang chính</a>
+          <a class="btn ghost" href="https://senpaingo-web.github.io/nk201203/" title="Quay về trang chính">⬅ Quay lại trang chính</a>
         </div>
       </div>
       <div class="hero-card">
